@@ -47,6 +47,8 @@ unsigned short sioReadMode16();
 unsigned short sioReadCtrl16();
 unsigned short sioReadBaud16();
 
+void netError();
+
 void sioInterrupt();
 int sioFreeze(gzFile f, int Mode);
 
