@@ -5,12 +5,16 @@ May 10, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
  * gui/Plugin.c: Likewise.
  * gui/LnxMain.c: Likewise.
  * gui/Gtk2Gui.c: Likewise.
+ * win32/gui/plugin.c: Likewise.
+ * win32/gui/WndMain.c: Likewise.
  * libpcsxcore/cdriso.c: Likewise.
  * libpcsxcore/psxcommon.c: Likewise.
  * libpcsxcore/plugins.h: Likewise.
  * libpcsxcore/psxcommon.h: Likewise.
  * libpcsxcore/sio.c: Likewise.
  * libpcsxcore/psxhw.c: Likewise.
+ * libpcsxcore/psxbios.c: Moved declaration of netError() into ...
+ * libpcsxcore/sio.h: Here.
 
 May 10, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
 
